# Astar-capstone

./: .env.example  .gitignore  DOCUMENTATION.md  NEXT_STEPS_PLAN.md  PRESENTATION.md  README.md  ROADMAP_A_B.md  aim.md  framework.md  pyproject.toml
.omc/plans/: agent-flow-recall-evidence.md  consensus-plan-150bad.md  consensus-tasks-150bad.md  day-5b-honest-framing.md  day-6-blind-screen-rule.md  day-6-rag-effective.md  day-6-rag-inconclusive.md  day-6-rag-ineffective.md  day-6-rag-pathB.md  day-D-pivot.md  day4-routing-reversal-disclosure.md  day5-react-agent-disclosure.md  open-questions.md  ralplan-iter4-agent-flow-recall.md
data/: .gitkeep  data.txt
data/agent_memory/: anti_patterns.embcache.npz  anti_patterns.jsonl  (+3 more)
docs/: ARCHITECTURE.md  FEASIBILITY_REPORT.md  MEETING_NOTES.md  RUN.md  capstone_narrative.md
scripts/: aggregate_runs.py  bootstrap_memory.py  build_eval_set.py  build_smoke_set.py  build_smoke_set_v2.py  calibrate_jaccard.py  clean_compare.py  collect_data.py  convert_data_txt.py  day5_acceptance_report.py  day5b_acceptance_gate.py  day6_audit.py  day6_blind_screen.py  demo.py  demo_light.py  evaluate.py  fill_contract_source.py  inspect_episodic.py  measure_baseline.py  precision_compute.py  pretest_self_consistency.py  probe_static_analyzer.py  run_ablation.py  run_all.sh  run_audit.py  run_baseline.py  run_full_pipeline.py  run_rag_ablation.sh  run_react_agent.py  run_single_agent.py  run_smoke.py  run_zeroshot_e2e.py  verify_ac5b.py  verify_ac9.py  备注.md
src/: __init__.py
tests/: __init__.py  test_nodes.py  test_tools.py
(+188 files in other folders)
